--- a/src/index.css
+++ b/src/index.css
@@ -1,6 +1,10 @@
 body {
+  background-color: #f2f2f2;
+  box-sizing: border-box;
+  padding: 0;
   margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
+  user-select: none;
+  font-family: -apple-system, BlinkMacSystemFont,'Manrope', 'Segoe UI', 'Roboto', 'Oxygen',
     'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
     sans-serif;
   -webkit-font-smoothing: antialiased;
